--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <ul>
         <li>課堂練習一：<a href="./link.html" target="_blank">鏈結練習</a></li>
         <li>課堂練習二：<a href="./table.html" target="_blank">表格練習</a></li>
+        <li>課堂練習二：<a href="./span.html" target="_blank">span練習</a></li>
     </ul>
 
 
