--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
         <li>課堂練習二：<a href="./table.html" target="_blank">表格練習</a></li>
         <li>課堂練習二：<a href="./span.html" target="_blank">span練習</a></li>
     </ul>
+    <ul>
+        <li>課後練習一：<a href="./FP-p1/FP-p1.html" target="_blank">課表練習</a> </li>
+        <li>課後練習二：<a href="./FP-p1/FP-p2.html" target="_blank">自我介紹練習</a> /li>
+    </ul>
 
 
 </body>
