--- a/FP-p2.html
+++ b/FP-p2.html
@@ -22,8 +22,8 @@
         <br> <i>Follow me on FB and IG~</i>
     </div>
 
-    <img class="animate lightSpeedIn" id="fb" src="./img/facebook-logo (1).png" alt="">
-    <img class="animate lightSpeedIn" id="ig" src="./img/instagram.png" alt="">
+    <img class="animate lightSpeedIn" id="fb" src="./img2/facebook-logo (1).png (1).png" alt="">
+    <img class="animate lightSpeedIn" id="ig" src="./img2/instagram.png" alt="">
 
 
     <div class="small text-secondary">Icons made by <a href="https://www.flaticon.com/authors/pixel-perfect" title="Pixel perfect">Pixel perfect</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/"
