--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     </ul>
     <ul>
 
-        <li>課後練習一：<a href="./FP-p1/FP-p1.html" target="_blank">課表練習</a> </li>
-        <li>課後練習二：<a href="./FP-p2/FP-p2.html" target="_blank">自我介紹練習</a> </li>
+        <li>課後練習一：<a href="./FP-p1.html" target="_blank">課表練習</a> </li>
+        <li>課後練習二：<a href="./FP-p2.html" target="_blank">自我介紹練習</a> </li>
     </ul>
 
 
