--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <li>課後練習一：<a href="./FP-p1.html" target="_blank">課表練習</a> </li>
         <li>課後練習二：<a href="./FP-p2.html" target="_blank">自我介紹練習</a> </li>
-        <li>課後練習二：<a href="./FP-p3.html" target="_blank">Pricing-table</a> </li>
+        <li>課後練習三：<a href="./FP-p3.html" target="_blank">Pricing-table</a> </li>
     </ul>
 
 
