--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ http://www.templatemo.com/tm-498-stimulus
                     <div class="home-thumb righthome">
                         <div class="home-photo "></div>
                         <div class="section-title">
-                            <h4 class="text-center wow bounceInUp" data-wow-delay="0.3s">welcome to my website</h4>
+                            <h4 class="text-center wow bounceInUp " data-wow-delay="0.3s">welcome to my website</h4>
                             <h1 class="resume  wow bounceInUp" data-wow-delay="0.6s ">個人<strong>履歷</strong></h1>
                             <p class="resume1 text-center wow fadeInUp " data-wow-delay="0.9s ">Resume</p>
 
@@ -187,8 +187,13 @@ http://www.templatemo.com/tm-498-stimulus
                         <i class="icon-bigger fas fa-cheese"></i>
                         <i class="icon-bigger fas fa-volleyball-ball"></i>
                         <i class="icon-bigger fas fa-headphones"></i>
-                        <p>做點心&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp打排球&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp聽音樂
-                        </p>
+                        <div>
+                            <span class="interestText">做點心</span>
+                            <span class="interestText">打排球</span>
+                            <span class="interestText">聽音樂</span>
+                        </div>
+                        <!-- <p class="">做點心&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp打排球&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp聽音樂
+                        </p> -->
                         <div id="interest">INTEREST</div>
 
                     </div>
