FP-2 FP-3change

--- a/index.html
+++ b/index.html
@@ -192,8 +192,7 @@ http://www.templatemo.com/tm-498-stimulus
                             <span class="interestText">打排球</span>
                             <span class="interestText">聽音樂</span>
                         </div>
-                        <!-- <p class="">做點心&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp打排球&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp聽音樂
-                        </p> -->
+                       
                         <div id="interest">INTEREST</div>
 
                     </div>
@@ -323,7 +322,7 @@ http://www.templatemo.com/tm-498-stimulus
                     <div class="work-img " id="try"></div>
                 </div>
                 <div class="col-md-6 col-sm-12">
-                    <a href="./FP-p2/FP-p2.html" target="_blank">
+                    <a href="./FP-p2.html" target="_blank">
                         <div class="work-img " id="homework2">
                             <div class="homeworkText chinesefont">self-introduction</div>
                         </div>
@@ -331,7 +330,7 @@ http://www.templatemo.com/tm-498-stimulus
 
                 </div>
                 <div class="col-md-6 col-sm-12">
-                    <a href="./FP-p3/FP-p3.html" target="_blank">
+                    <a href="./FP-p3.html" target="_blank">
                         <div class="work-img " id="homework3">
                             <div class="homeworkText1 chinesefont">pricing-table</div>
                         </div>
