--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@ http://www.templatemo.com/tm-498-stimulus
                     <div class="work-img " id="try"></div>
                 </div>
                 <div class="col-md-6 col-sm-12">
-                    <a href="./FP-p2.html" target="_blank">
+                    <a href="https://hsuchingchun.github.io/FP-p2.html" target="_blank">
                         <div class="work-img " id="homework2">
                             <div class="homeworkText chinesefont">self-introduction</div>
                         </div>
@@ -330,7 +330,7 @@ http://www.templatemo.com/tm-498-stimulus
 
                 </div>
                 <div class="col-md-6 col-sm-12">
-                    <a href="./FP-p3.html" target="_blank">
+                    <a href="https://hsuchingchun.github.io/FP-p3.html" target="_blank">
                         <div class="work-img " id="homework3">
                             <div class="homeworkText1 chinesefont">pricing-table</div>
                         </div>
