--- a/FP-p2.html
+++ b/FP-p2.html
@@ -22,7 +22,7 @@
         <br> <i>Follow me on FB and IG~</i>
     </div>
 
-    <img class="animate lightSpeedIn" id="fb" src="./img2/facebook-logo (1).png (1).png" alt="">
+    <img class="animate lightSpeedIn" id="fb" src="./img2/facebook-logo (1).png" alt="">
     <img class="animate lightSpeedIn" id="ig" src="./img2/instagram.png" alt="">
 
 
