--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ http://www.templatemo.com/tm-498-stimulus
                                 <strong>許青純</strong> </h3>
                             <h2 class=" chinesefont typing"><strong> HSU,
                                     CHING-CHUN</strong></h2>
-                            <p class="wow fadeInUp chinesefont1" data-wow-delay="0.8s">目前就讀於臺灣大學圖資系一年級</p>
+                            <p class="wow fadeInUp chinesefont1" data-wow-delay="0.8s">目前就讀於臺灣大學圖資系二年級</p>
                             <h4 class="wow fadeInUp keyword"><span class="big">C</span> apble 能幹</h4>
                             <h4 class="wow fadeInUp keyword"><span class="big">H</span> onest 誠實</h4>
                             <h4 class="wow fadeInUp keyword"><span class="big">U</span> derstanding 領悟性高</h4>
@@ -243,7 +243,7 @@ http://www.templatemo.com/tm-498-stimulus
                             <ul class="school">
                                 <li class="list-margin">參加資訊研究社</li>
                                 <li class="list-margin">App Inventor專題製作</li>
-                                <li class="list-margin">地理報告影片製作</li>
+                                <li class="list-margin">農業發展轉型影片製作</li>
                                 <li class="list-margin">加入畢籌攝資組</li>
                             </ul>
                         </div>
@@ -260,8 +260,9 @@ http://www.templatemo.com/tm-498-stimulus
                                 </h3>
                             </div>
                             <ul class="school">
-                                <li class="list-margin">JAVA程式語言學習</li>
-                                <li class="list-margin">七美晨光路跑設計組</li>
+                                <li class="list-margin">臺大漁服社美宣長</li>
+                                <li class="list-margin">七美晨光路跑設計組組長</li>
+                                <li class="list-margin">圖資系女排隊長</li>
                                 <P class="color-white">CONTINUE>></P>
                             </ul>
                         </div>
@@ -354,7 +355,12 @@ http://www.templatemo.com/tm-498-stimulus
                         <iframe width="560" height="315" src="https://www.youtube.com/embed/bDj0gf54xy4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 </div>
-
+                  <div class=" col-md-12 col-sm-12">
+                    <div class="video-container">
+                        <iframe  src="https://youtu.be/pdzaKCdS9ls" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                </div>
+                
             </div>
 
         </div>
