--- a/index.html
+++ b/index.html
@@ -262,8 +262,8 @@ http://www.templatemo.com/tm-498-stimulus
                             <ul class="school">
                                 <li class="list-margin">臺大漁服社美宣長</li>
                                 <li class="list-margin">七美晨光路跑設計組組長</li>
-                                <li class="list-margin">圖資系女排隊長</li>
-                                <P class="color-white">CONTINUE>></P>
+                                <li class="list-margin">圖資系女排隊長<P class="color-white">CONTINUE>></P></li>
+                              
                             </ul>
                         </div>
                     </div>
@@ -357,7 +357,7 @@ http://www.templatemo.com/tm-498-stimulus
                 </div>
                   <div class=" col-md-12 col-sm-12">
                     <div class="video-container">
-                        <iframe  src="https://youtu.be/pdzaKCdS9ls" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                      <iframe width="560" height="315" src="https://www.youtube.com/embed/pdzaKCdS9ls" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 </div>
                 
