--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@ http://www.templatemo.com/tm-498-stimulus
                             <ul class="school">
                                 <li class="list-margin">臺大漁服社美宣長</li>
                                 <li class="list-margin">七美晨光路跑設計組組長</li>
-                                <li class="list-margin">圖資系女排隊長<P class="color-white">CONTINUE>></P></li>
+                                <li class="list-margin">圖資系女排隊長 CONTINUE>></li>
                               
                             </ul>
                         </div>
@@ -355,7 +355,7 @@ http://www.templatemo.com/tm-498-stimulus
                         <iframe width="560" height="315" src="https://www.youtube.com/embed/bDj0gf54xy4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 </div>
-                  <div class=" col-md-12 col-sm-12">
+                  <div class=" col-md-6 col-sm-12">
                     <div class="video-container">
                       <iframe width="560" height="315" src="https://www.youtube.com/embed/pdzaKCdS9ls" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
