--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@ http://www.templatemo.com/tm-498-stimulus
                     <div class="contact-form ">
                         <div class="wow fadeInUp section-title" data-wow-delay="0.2s">
                             <h1 class="color-white chinesefont">Have any questions?</h1>
-                            <p class="color-white">Welcome come to leave some messages to me~~
+                            <p class="color-white">Welcome to leave some messages to me~~
                             </p>
                         </div>
 
