--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-12">
                         <a href="./project/pocketWorld.html">
-                            <img style="width: 100%;" class="center" src="./img/XR競賽.png" alt="Pocket World AR">
+                            <img style="width: 100%;" class="center" src="./img/feature-project/pocketworld/pocket-cover-mobile.png" alt="Pocket World AR">
                         </a>
                     </div>
                 </div>
@@ -105,8 +105,8 @@
             <div class="container card">
                 <div class="row ">
                     <div class="col-lg-6 col-md-6 col-sm-12">
-                        <a href="./index.html">
-                            <img style="width: 100%;" class="center" src="./img/MoodLight Mockup.png" alt="MoodLight心晴">
+                        <a href="./project/moodlight.html">
+                            <img style="width: 100%;" class="center" src="./img/feature-project/moodlight/moodlight-mockup.png" alt="MoodLight心晴">
                         </a>
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-12 project-intro">
@@ -116,7 +116,7 @@
                             <p>結合大數據應用，透過快樂日記與快樂清單推薦，有效排解使用者負面情緒，給予自癒能量。</p>
                             <h4 class="">#大數據 #UI設計 </h4>
                             <br>
-                            <a href="#about" class="btn project-tag" data-wow-delay="1.4s">
+                            <a href="./project/moodlight.html" class="btn project-tag" data-wow-delay="1.4s">
                                 <h4>了解更多</h4>
                             </a>
 
@@ -194,6 +194,7 @@
                                 <a href="./index.html">
                                     <img style="width: 100%;" class="center" src="./img/special-project/createarttalk/cat-web.png" alt="CreateArtTalk 藝擴體工作室">
                                 </a>
+                                <!-- <div class="img-center" style="background-image: url(./img/special-project/createarttalk/cat-web.png); height: 200px; width: 450px; background-size: cover; background-position: center;"></div> -->
                             </div>
                             <div class="col-lg-12 col-md-12 col-sm-12 project-intro">
                                 <div class="project-black mx-3">
@@ -248,11 +249,11 @@
     </footer>
 
     <!-- SCRIPTS -->
-    
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js "></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js " integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1 " crossorigin="anonymous ">
     </script>
-   
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js " integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N " crossorigin="anonymous "></script>
     <script src="./js/custom.js"></script>
     <!-- <script src="https://cdn.jsdelivr.net/npm/p5@1.6.0/lib/p5.js "></script>
