--- a/project/moodlight.html
+++ b/project/moodlight.html
@@ -57,16 +57,13 @@
             <div class="row">
                 <div class="col-lg-5 col-md-12 col-sm-12 title-cover">
                     <div class="">
-                        <h2 class="keep-all"><strong> MoodLight 心晴</strong>
+                        <h2 class="keep-all"><strong> <span>MoodLight</span>心晴</strong>
                         </h2>
                         <p class="color-orange">大數據應用專題</p>
-                        <p>一款兼備即時性、客製化，並帶給使用者自癒能力的工具</p>
+                        <p>Moodlight, lighten your mood. 心晴，點亮你的心。<br>一款兼備即時性、客製化，並帶給使用者自癒能力的工具
+                        </p>
                     </div>
                 </div>
-                <!-- <div class="col-lg-8 col-md-12 col-sm-12"> -->
-                <!-- <img style="width: 100%;" class="center" src="../img/XR競賽.png" alt="Pocket World AR"> -->
-                <!-- </div> -->
-
             </div>
         </div>
     </section>
@@ -96,7 +93,7 @@
                 <div class="col-lg-2 col-md-12 col-sm-12">
                     <p class="project-title"><strong>時間</strong>
                     </p>
-                    <p>2021.9 - 2022.11<br>
+                    <p>2021.9 - 2022.4<br>
                     </p>
                 </div>
             </div>
@@ -105,7 +102,6 @@
     <div id="list-example" class="list-group col-lg-2">
         <a class="list-group-item list-group-item-action" href="#overview">總覽</a>
         <a class="list-group-item list-group-item-action" href="#problem">問題</a>
-        <!-- <a class="list-group-item list-group-item-action" href="#list-item-3">解決方法</a> -->
         <a class="list-group-item list-group-item-action" href="#process">設計過程</a>
         <a class="ms-3 list-group-item list-group-item-action" href="#research">文獻研究 & 發想</a>
         <a class="ms-3 list-group-item list-group-item-action" href="#prototype">原型設計</a>
@@ -123,28 +119,28 @@
 
                     <div class="col-lg-8 my-3">
                         <h3 class="page-heading"><strong>目標</strong></h3>
-                        <p class="content-black">製作一款 AR 互動遊戲，讓使用者觀賞袖珍藝術作品時，能獲得更好的體驗。Pocket World 可以協助使用者透過手機旋轉、放大、第一視角等方式，打破空間、場域限制，讓使用者可以從不同視角自由觀看袖珍展品，滿足探索慾望。</p>
+                        <p class="content-black">
+                            為受負面情緒所困的人，設計一款 MoodLight APP ，期望藉由使用者數據，透過K-means 分群，採用NoSQL資料庫，提供客製化的情緒記錄日記與活動推薦系統。
+                        </p>
                     </div>
 
                     <div class="col-lg-8 my-3">
                         <h3 class="page-heading"><strong>需求</strong></h3>
                         <div class="row list-padding">
                             <ui class="content-black col-lg-8 col-md-12">
-                                <li>製作行動裝置 AR</li>
-                                <li>測試袖珍作品使用 AR 的可行性與有效性</li>
-                                <li>了解使用者的觀賞袖珍作品的需求</li>
+                                <li>發展客製化改善負面情緒的方法</li>
+                                <li>了解大數據應用原理與流程</li>
+                                <li>製作行動裝置 APP 原型</li>
                             </ui>
                         </div>
                     </div>
 
                     <div class="col-lg-8 my-3">
                         <h3 class="page-heading"><strong>原型</strong></h3>
-                        <!-- <h3 class="col-lg-1 col-md-12"><strong>原型</strong></h3> -->
-                        <lite-youtube class="video" videoid="XUjTZakNdJA" style="background-image: url('../img/feature-project/pocketworld/pocket-cover.png');">
-                            <a href="https://www.youtube.com/watch?v=XUjTZakNdJA" class="lty-playbtn" title="Play Video">
-                                <span class="lyt-visually-hidden">Play Video: Keynote (Google I/O '18)</span>
-                            </a>
-                        </lite-youtube>
+                        <div class="center">
+                            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="400" height="800" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FqCuuHUTKLu5B8fWuqVXkeH%2FMoodlight%3Fpage-id%3D0%253A1%26node-id%3D267-96%26starting-point-node-id%3D267%253A96"
+                                allowfullscreen></iframe>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -296,74 +292,100 @@
                             </p>
                         </div>
                     </div>
-                    <div id="finding" class="col-lg-8 my-5">
-                        <h3 class="page-heading my-3"><strong>04 結果 & 迭代</strong></h3>
-                        <div class="row justify-content-center">
-                            <div class="my-3">
-                                <h3 class="page-heading mb-3"><strong>整體而言，<span>Pocket World </span> 能增加觀眾欣賞袖珍作品的興趣與吸引力，有效幫助觀眾探索袖珍作品的細節設計。</strong></h3>
-                            </div>
-                        </div>
-
-                        <div class="row justify-content-center">
-                            <!-- 易用性分數 -->
-                            <div class="col-lg-8 col-md-7 col-sm-7 text-center my-3">
-                                <table class="table table-bordered">
-                                    <thead>
-                                        <th scope="col"></th>
-                                        <th scope="col">易用性</th>
-                                        <th scope="col">有用性</th>
-                                    </thead>
-                                    <tbody>
-                                        <tr>
-                                            <th scope="row">Pocket PALM</th>
-                                            <td class="table-warning">4.51</td>
-                                            <td>4.26</td>
-                                        </tr>
-                                        <tr>
-                                            <th scope="row">Pocket MEGA</th>
-                                            <td>4.17</td>
-                                            <td class="table-warning">4.29</td>
-                                        </tr>
-                                        <tr>
-                                            <th scope="row">Gulliver World</th>
-                                            <td>4.00</td>
-                                            <td class="table-warning">4.69</td>
-                                        </tr>
-                                        <tr>
-                                            <th scope="row">平均</th>
-                                            <td>4.23</td>
-                                            <td>4.41</td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                            </div>
-                            <div class="col-lg-4 col-md-5 col-sm-5 text-center my-auto">
-                                <table class="table table-bordered">
-                                    <thead>
-                                        <th scope="col"></th>
-                                        <th scope="col">使用意願與動機</th>
-                                    </thead>
-                                    <tbody>
-                                        <tr>
-                                            <th scope="row">G1</th>
-                                            <td>4.18</td>
-                                        </tr>
-                                        <tr>
-                                            <th scope="row">G2</th>
-                                            <td class="table-warning">4.50</td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                            </div>
-                            <div class="row list-padding">
-                                <ui class="content-black">
-                                    <li class="mb-2"><span>易用性：</span>Pocket PALM 中，旋轉與放大的功能最容易操作</li>
-                                    <li class="my-2"><span>有用性：</span>Pocket MEGA 中，空間辨識 AR 能幫助使用者更靠近觀看模型，了解更多的細節設計，且打破實體博物館空間的限制</li>
-                                    <li class="my-2"><span>第一人稱視角：</span>Gulliver World 能提供更沉浸且有趣的體驗，讓使用者更願意探索其中</li>
-                                </ui>
+                    <div id="usability" class="col-lg-8 my-5">
+                        <!-- <h3 class="page-heading color-yellow"><strong>文獻研究→發想→原型設計→易用性測試→迭代</strong></h3> -->
+                        <h3 class="page-heading my-3"><strong>03 易用性測試</strong></h3>
+                        <div class="content-black">
+                            <p>我們邀請35位受試者分為兩組進行遠端易用性測試和訪談，用以了解使用者使用Pocket World AR 觀賞袖珍作品的回饋。
+                            </p>
+                            <p>我們設計兩個影片原型進行遠端使用者測試：
+                            </p>
+                            <p>
+                                1. 原型一：提供一般功能 AR 讓使用者與展品互動，包含Pocket PALM、Pocket MEGA
+                                <br> 2. 原型二：相較原型一，增加視角轉換的互動功能，包含Pocket PALM、Pocket MEGA、Gulliver World
+                            </p>
+                            <p>
+                                <br> 透過質化（訪談）與量化（易用性測試、問卷量表）的方式，蒐集以下資訊：
+                                <br>
+                                <div class="row mx-auto">
+                                    <div class="page-tag keep-all">博物館 AR 使用經驗</div>
+                                    <div class="page-tag keep-all my-auto">使用原因</div>
+                                    <div class="page-tag keep-all">預期功能</div>
+                                    <div class="page-tag keep-all">有用性 (helpfulness)</div>
+                                    <div class="page-tag keep-all">有效性 (effectiveness)</div>
+                            </p>
                             </div>
                         </div>
                     </div>
+                    <div id="finding" class="col-lg-8 my-5 ">
+                        <h3 class="page-heading my-3 "><strong>04 結果 & 迭代</strong></h3>
+                        <div class="row justify-content-center ">
+                            <div class="my-3 ">
+                                <h3 class="page-heading mb-3 "><strong>整體而言，<span>Pocket World </span> 能增加觀眾欣賞袖珍作品的興趣與吸引力，有效幫助觀眾探索袖珍作品的細節設計。</strong></h3>
+                                <div class="row justify-content-center mx-2 mb-2">
+                                    <!-- 易用性分數 -->
+                                    <div class="col-lg-8 col-md-7 col-sm-7 text-center my-3 ">
+                                        <table class="table table-bordered ">
+                                            <thead>
+                                                <th scope="col "></th>
+                                                <th scope="col ">易用性</th>
+                                                <th scope="col ">有用性</th>
+                                            </thead>
+                                            <tbody>
+                                                <tr>
+                                                    <th scope="row ">Pocket PALM</th>
+                                                    <td class="table-warning ">4.51</td>
+                                                    <td>4.26</td>
+                                                </tr>
+                                                <tr>
+                                                    <th scope="row ">Pocket MEGA</th>
+                                                    <td>4.17</td>
+                                                    <td class="table-warning ">4.29</td>
+                                                </tr>
+                                                <tr>
+                                                    <th scope="row ">Gulliver World</th>
+                                                    <td>4.00</td>
+                                                    <td class="table-warning ">4.69</td>
+                                                </tr>
+                                                <tr>
+                                                    <th scope="row ">平均</th>
+                                                    <td>4.23</td>
+                                                    <td>4.41</td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                    <div class="col-lg-4 col-md-5 col-sm-5 text-center my-auto ">
+                                        <table class="table table-bordered ">
+                                            <thead>
+                                                <th scope="col "></th>
+                                                <th scope="col ">使用意願與動機</th>
+                                            </thead>
+                                            <tbody>
+                                                <tr>
+                                                    <th scope="row ">G1</th>
+                                                    <td>4.18</td>
+                                                </tr>
+                                                <tr>
+                                                    <th scope="row ">G2</th>
+                                                    <td class="table-warning ">4.50</td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
+                                <div class="row list-padding ">
+                                    <ui class="content-black ">
+                                        <li class="mb-2 "><span>易用性：</span>Pocket PALM 中，旋轉與放大的功能最容易操作</li>
+                                        <li class="my-2 "><span>有用性：</span>Pocket MEGA 中，空間辨識 AR 能幫助使用者更靠近觀看模型，了解更多的細節設計，且打破實體博物館空間的限制</li>
+                                        <li class="my-2 "><span>第一人稱視角：</span>Gulliver World 能提供更沉浸且有趣的體驗，讓使用者更願意探索其中</li>
+                                    </ui>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
         </section>
 
         <section id="poster" class="list-item" style="background-color: #f7f7f7;">
