--- a/project/pocketWorld.html
+++ b/project/pocketWorld.html
@@ -57,16 +57,12 @@
             <div class="row">
                 <div class="col-lg-5 col-md-12 col-sm-12 title-cover">
                     <div class="">
-                        <h2 class="keep-all"><strong> Pocket World AR 口袋世界擴增實境</strong>
+                        <h2 class="keep-all"><strong><span>Pocket World AR</span> 口袋世界擴增實境</strong>
                         </h2>
                         <p class="color-orange">沉浸式科技研究</p>
                         <p>Pocket World 是一款 AR 遊戲，使用者能藉由操控 AR 物件，擁有更好的視角，以觀看袖珍屋結構設計</p>
                     </div>
                 </div>
-                <!-- <div class="col-lg-8 col-md-12 col-sm-12"> -->
-                <!-- <img style="width: 100%;" class="center" src="../img/XR競賽.png" alt="Pocket World AR"> -->
-                <!-- </div> -->
-
             </div>
         </div>
     </section>
@@ -105,7 +101,6 @@
     <div id="list-example" class="list-group col-lg-2">
         <a class="list-group-item list-group-item-action" href="#overview">總覽</a>
         <a class="list-group-item list-group-item-action" href="#problem">問題</a>
-        <!-- <a class="list-group-item list-group-item-action" href="#list-item-3">解決方法</a> -->
         <a class="list-group-item list-group-item-action" href="#process">設計過程</a>
         <a class="ms-3 list-group-item list-group-item-action" href="#research">文獻研究 & 發想</a>
         <a class="ms-3 list-group-item list-group-item-action" href="#prototype">原型設計</a>
@@ -139,10 +134,9 @@
 
                     <div class="col-lg-8 my-3">
                         <h3 class="page-heading"><strong>原型</strong></h3>
-                        <!-- <h3 class="col-lg-1 col-md-12"><strong>原型</strong></h3> -->
                         <lite-youtube class="video" videoid="XUjTZakNdJA" style="background-image: url('../img/feature-project/pocketworld/pocket-cover.png');">
                             <a href="https://www.youtube.com/watch?v=XUjTZakNdJA" class="lty-playbtn" title="Play Video">
-                                <span class="lyt-visually-hidden">Play Video: Keynote (Google I/O '18)</span>
+                                <span class="lyt-visually-hidden">Pocket World 原型</span>
                             </a>
                         </lite-youtube>
                     </div>
@@ -164,6 +158,7 @@
                         </p>
                     </div>
                 </div>
+            </div>
         </section>
 
         <section id="process" class="list-item">
@@ -188,7 +183,6 @@
                     </div>
 
                     <div id="prototype" class="col-lg-8 my-3 mt-5">
-                        <!-- <h3 class="page-heading color-yellow"><strong>文獻研究→發想→原型設計→易用性測試→迭代</strong></h3> -->
                         <h3 class="page-heading mb-3"><strong>02 原型設計</strong></h3>
                         <div class="content-black">
                             <p>我們透過 MAKAR 平台共設計三種觀賞袖珍展品模式，包含 Pocket PALM、Pocket MEGA、Guilliver World，分別採用圖片辨識、空間辨識與第三人稱視角、第一人稱視角，使用者可以透過行動裝置啟用 AR 觀賞模型。
@@ -272,7 +266,6 @@
                     <div id="usability" class="col-lg-8 my-5">
                         <!-- <h3 class="page-heading color-yellow"><strong>文獻研究→發想→原型設計→易用性測試→迭代</strong></h3> -->
                         <h3 class="page-heading my-3"><strong>03 易用性測試</strong></h3>
-                        <!-- <p class="second-heading"><strong>沉浸式科技的選擇</strong></p> -->
                         <div class="content-black">
                             <p>我們邀請35位受試者分為兩組進行遠端易用性測試和訪談，用以了解使用者使用Pocket World AR 觀賞袖珍作品的回饋。
                             </p>
@@ -291,94 +284,94 @@
                                     <div class="page-tag keep-all">預期功能</div>
                                     <div class="page-tag keep-all">有用性 (helpfulness)</div>
                                     <div class="page-tag keep-all">有效性 (effectiveness)</div>
-
-                                </div>
                             </p>
-                        </div>
-                    </div>
-                    <div id="finding" class="col-lg-8 my-5">
-                        <h3 class="page-heading my-3"><strong>04 結果 & 迭代</strong></h3>
-                        <div class="row justify-content-center">
-                            <div class="my-3">
-                                <h3 class="page-heading mb-3"><strong>整體而言，<span>Pocket World </span> 能增加觀眾欣賞袖珍作品的興趣與吸引力，有效幫助觀眾探索袖珍作品的細節設計。</strong></h3>
                             </div>
                         </div>
+                    </div>
+                    <div id="finding" class="col-lg-8 my-5 ">
+                        <h3 class="page-heading my-3 "><strong>04 結果 & 迭代</strong></h3>
+                        <div class="row justify-content-center ">
+                            <div class="my-3 ">
+                                <h3 class="page-heading mb-3 "><strong>整體而言，<span>Pocket World </span> 能增加觀眾欣賞袖珍作品的興趣與吸引力，有效幫助觀眾探索袖珍作品的細節設計。</strong></h3>
+                                <div class="row justify-content-center mx-2 mb-2">
+                                    <!-- 易用性分數 -->
+                                    <div class="col-lg-8 col-md-7 col-sm-7 text-center my-3 ">
+                                        <table class="table table-bordered ">
+                                            <thead>
+                                                <th scope="col "></th>
+                                                <th scope="col ">易用性</th>
+                                                <th scope="col ">有用性</th>
+                                            </thead>
+                                            <tbody>
+                                                <tr>
+                                                    <th scope="row ">Pocket PALM</th>
+                                                    <td class="table-warning ">4.51</td>
+                                                    <td>4.26</td>
+                                                </tr>
+                                                <tr>
+                                                    <th scope="row ">Pocket MEGA</th>
+                                                    <td>4.17</td>
+                                                    <td class="table-warning ">4.29</td>
+                                                </tr>
+                                                <tr>
+                                                    <th scope="row ">Gulliver World</th>
+                                                    <td>4.00</td>
+                                                    <td class="table-warning ">4.69</td>
+                                                </tr>
+                                                <tr>
+                                                    <th scope="row ">平均</th>
+                                                    <td>4.23</td>
+                                                    <td>4.41</td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                    <div class="col-lg-4 col-md-5 col-sm-5 text-center my-auto ">
+                                        <table class="table table-bordered ">
+                                            <thead>
+                                                <th scope="col "></th>
+                                                <th scope="col ">使用意願與動機</th>
+                                            </thead>
+                                            <tbody>
+                                                <tr>
+                                                    <th scope="row ">G1</th>
+                                                    <td>4.18</td>
+                                                </tr>
+                                                <tr>
+                                                    <th scope="row ">G2</th>
+                                                    <td class="table-warning ">4.50</td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
+                                <div class="row list-padding ">
+                                    <ui class="content-black ">
+                                        <li class="mb-2 "><span>易用性：</span>Pocket PALM 中，旋轉與放大的功能最容易操作</li>
+                                        <li class="my-2 "><span>有用性：</span>Pocket MEGA 中，空間辨識 AR 能幫助使用者更靠近觀看模型，了解更多的細節設計，且打破實體博物館空間的限制</li>
+                                        <li class="my-2 "><span>第一人稱視角：</span>Gulliver World 能提供更沉浸且有趣的體驗，讓使用者更願意探索其中</li>
+                                    </ui>
+                                </div>
 
-                        <div class="row justify-content-center">
-                            <!-- 易用性分數 -->
-                            <div class="col-lg-8 col-md-7 col-sm-7 text-center my-3">
-                                <table class="table table-bordered">
-                                    <thead>
-                                        <th scope="col"></th>
-                                        <th scope="col">易用性</th>
-                                        <th scope="col">有用性</th>
-                                    </thead>
-                                    <tbody>
-                                        <tr>
-                                            <th scope="row">Pocket PALM</th>
-                                            <td class="table-warning">4.51</td>
-                                            <td>4.26</td>
-                                        </tr>
-                                        <tr>
-                                            <th scope="row">Pocket MEGA</th>
-                                            <td>4.17</td>
-                                            <td class="table-warning">4.29</td>
-                                        </tr>
-                                        <tr>
-                                            <th scope="row">Gulliver World</th>
-                                            <td>4.00</td>
-                                            <td class="table-warning">4.69</td>
-                                        </tr>
-                                        <tr>
-                                            <th scope="row">平均</th>
-                                            <td>4.23</td>
-                                            <td>4.41</td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                            </div>
-                            <div class="col-lg-4 col-md-5 col-sm-5 text-center my-auto">
-                                <table class="table table-bordered">
-                                    <thead>
-                                        <th scope="col"></th>
-                                        <th scope="col">使用意願與動機</th>
-                                    </thead>
-                                    <tbody>
-                                        <tr>
-                                            <th scope="row">G1</th>
-                                            <td>4.18</td>
-                                        </tr>
-                                        <tr>
-                                            <th scope="row">G2</th>
-                                            <td class="table-warning">4.50</td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                            </div>
-                            <div class="row list-padding">
-                                <ui class="content-black">
-                                    <li class="mb-2"><span>易用性：</span>Pocket PALM 中，旋轉與放大的功能最容易操作</li>
-                                    <li class="my-2"><span>有用性：</span>Pocket MEGA 中，空間辨識 AR 能幫助使用者更靠近觀看模型，了解更多的細節設計，且打破實體博物館空間的限制</li>
-                                    <li class="my-2"><span>第一人稱視角：</span>Gulliver World 能提供更沉浸且有趣的體驗，讓使用者更願意探索其中</li>
-                                </ui>
                             </div>
                         </div>
                     </div>
+                </div>
         </section>
 
-        <section id="poster" class="list-item" style="background-color: #f7f7f7;">
-            <div class="container">
-                <h4 class="heading my-4 project-heading">海報論文 Poster</h4>
-                <div class="row justify-content-center">
-                    <div id="research" class="col-lg-8 my-3">
-                        <h3 class="page-heading my-2"><span>TAICHI'22 / CSCW'22</span></h3>
-                        <div class="card p-0 mb-4">
-                            <img src="../img/feature-project/pocketworld/pocket-poster.png">
+        <section id="poster " class="list-item " style="background-color: #f7f7f7; ">
+            <div class="container ">
+                <h4 class="heading my-4 project-heading ">海報論文 Poster</h4>
+                <div class="row justify-content-center ">
+                    <div id="research " class="col-lg-8 my-3 ">
+                        <h3 class="page-heading my-2 "><span>TAICHI'22 / CSCW'22</span></h3>
+                        <div class="card p-0 mb-4 ">
+                            <img src="../img/feature-project/pocketworld/pocket-poster.png ">
                         </div>
-                        <div class="row list-padding mb-3">
-                            <ui class="content-black">
-                                <li class="mb-2">Yang, T.-L., Hsu, C.-C. & Lin, W. (2022, October). Pocket World: Using Mobile AR to Tour Visitors in a Miniature Museum. Poster accepted for presentation at TAICHI2022.</li>
-                                <li class="my-2">Yang, T.-L., Hsu, C.-C. & Lin, W. (2022, November). Pocket World: Using Mobile AR to Tour Visitors in a Miniature Museum. Inviting Poster at CSCW2022, Online.</li>
+                        <div class="row list-padding mb-3 ">
+                            <ui class="content-black ">
+                                <li class="mb-2 ">Yang, T.-L., Hsu, C.-C. & Lin, W. (2022, October). Pocket World: Using Mobile AR to Tour Visitors in a Miniature Museum. Poster accepted for presentation at TAICHI2022.</li>
+                                <li class="my-2 ">Yang, T.-L., Hsu, C.-C. & Lin, W. (2022, November). Pocket World: Using Mobile AR to Tour Visitors in a Miniature Museum. Inviting Poster at CSCW2022, Online.</li>
                             </ui>
                         </div>
                     </div>
@@ -386,25 +379,25 @@
             </div>
         </section>
 
-        <section id="learning" class="list-item" style="background-color: rgba(254, 200, 4, 0.1);">
-            <div class="container">
-                <h4 class="heading my-4 project-heading">學習 Learning</h4>
-                <div class="row justify-content-center">
-                    <div id="research" class="col-lg-8 my-3">
-                        <h3 class="page-heading my-2"><strong>沉浸式科技的導入要能夠滿足與使用者的需求動機，才能有良好的互動成效。</strong></h3>
-                        <div class="content-black">
+        <section id="learning " class="list-item " style="background-color: rgba(254, 200, 4, 0.1); ">
+            <div class="container ">
+                <h4 class="heading my-4 project-heading ">學習 Learning</h4>
+                <div class="row justify-content-center ">
+                    <div id="research " class="col-lg-8 my-3 ">
+                        <h3 class="page-heading my-2 "><strong>沉浸式科技的導入要能夠滿足與使用者的需求動機，才能有良好的互動成效。</strong></h3>
+                        <div class="content-black ">
                             <p>沉浸式科技的導入要能夠滿足與使用者的需求動機，才能有良好的互動成效。 經過這個專案讓我了解沉浸式科技AR、VR的使用差異，以及認識到設計師對於互動科技的選擇，對使用者的體驗有很大的影響。透過完整的測試流程，能幫助我認識使用者在操作時的行為與感受，藉此優化未來的設計。
                             </p>
                         </div>
                     </div>
                 </div>
-                <div class="row justify-content-center mt-5">
-                    <div class="col-lg-8 row">
-                        <div class="text-start col-6">
-                            <a class="py-1 go-tag" onclick="self.location.href='../index.html'" value="回首頁"><span>回首頁</span></a>
+                <div class="row justify-content-center my-5 mx-1 ">
+                    <div class="col-lg-8 row ">
+                        <div class="text-start col-4 ">
+                            <a class="py-1 go-tag " onclick="self.location.href='../index.html' " value="回首頁 "><strong>回首頁</strong></a>
                         </div>
-                        <div class="text-end col-6">
-                            <a class="py-1 go-tag" onclick="self.location.href='moodlight.html'"><span>NEXT | MoodLight 心晴</span></a>
+                        <div class="text-end col-8 ">
+                            <a class="py-1 go-tag " onclick="self.location.href='moodlight.html' "><span>NEXT | MoodLight</span> <strong>心晴</strong></a>
                         </div>
                     </div>
                 </div>
@@ -414,38 +407,38 @@
         </section>
 
 
-        </div>
+    </div>
 
 
 
 
-        <!-- Footer Section -->
+    <!-- Footer Section -->
 
-        <footer>
-            <div class="container ">
-                <div class="row ">
+    <footer>
+        <div class="container ">
+            <div class="row ">
 
-                    <div class="col-md-12 col-sm-12 ">
-                        <div class="wow fadeInUp footer-copyright " data-wow-delay="1.8s ">
-                            <p>Copyright &copy; 2023 HSU, CHING-CHUN
-                                <br>All Rights Reserved.
-                            </p>
-                        </div>
-
+                <div class="col-md-12 col-sm-12 ">
+                    <div class="wow fadeInUp footer-copyright " data-wow-delay="1.8s ">
+                        <p>Copyright &copy; 2023 HSU, CHING-CHUN
+                            <br>All Rights Reserved.
+                        </p>
                     </div>
 
                 </div>
+
             </div>
-        </footer>
+        </div>
+    </footer>
 
 
-        <!-- SCRIPTS -->
+    <!-- SCRIPTS -->
 
-        <script src="./project.js"></script>
-        <script src="../js/custom.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js " integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N " crossorigin="anonymous "></script>
-        <script src="../js/lite-yt-embed.js"></script>
-        <!-- <script src="https://cdn.jsdelivr.net/npm/p5@1.6.0/lib/p5.js "></script>
+    <script src="./project.js "></script>
+    <script src="../js/custom.js "></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js " integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N " crossorigin="anonymous "></script>
+    <script src="../js/lite-yt-embed.js "></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/p5@1.6.0/lib/p5.js "></script>
 <script src="js/sketch.js "></script> -->
 </body>
 
